WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27951
[commit+] Invalid assert in v8 SVG bindings (hit during acid3 test).
https://bugs.webkit.org/show_bug.cgi?id=27951
Summary
[commit+] Invalid assert in v8 SVG bindings (hit during acid3 test).
Dean McNamee
Reported
2009-08-03 13:53:19 PDT
We're asserting that a PassRefPtr is not NULL, but the pointer has already be taken my assigning it to a refptr. The patch is simple. It is already covered by tests.
Attachments
Patch
(1.08 KB, patch)
2009-08-03 13:55 PDT
,
Dean McNamee
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean McNamee
Comment 1
2009-08-03 13:55:28 PDT
Created
attachment 34002
[details]
Patch
Adam Barth
Comment 2
2009-08-03 13:57:41 PDT
Comment on
attachment 34002
[details]
Patch Thanks dean.
Adam Barth
Comment 3
2009-08-03 13:59:05 PDT
Will land.
Adam Barth
Comment 4
2009-08-03 14:01:01 PDT
Comment on
attachment 34002
[details]
Patch Clearing review flag on attachment: 34002 Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/bindings/v8/V8SVGPODTypeWrapper.h Committed
r46730
M WebCore/ChangeLog M WebCore/bindings/v8/V8SVGPODTypeWrapper.h
r46730
= 40d39dba04f64d485ce7ee3a2141c31d193d805a (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/46730
Adam Barth
Comment 5
2009-08-03 14:01:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug