2009-08-03  Dean McNamee  <deanm@chromium.org>

Reviewed by Adam Barth.

        Correct an assert on a PassRefPtr in the v8 svg bindings.
        https://bugs.webkit.org/show_bug.cgi?id=27951

        * bindings/v8/V8SVGPODTypeWrapper.h:
        (WebCore::V8SVGDynamicPODTypeWrapper::V8SVGDynamicPODTypeWrapper):

Canonical link: https://commits.webkit.org/38336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46730 268f45cc-cd09-0410-ab3c-d52691b4dbfc